--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -40,6 +40,27 @@ body {
   transition-property: all;
   transition-timing-function: ease-in-out;
 }
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #0e5cad white;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #d0d3d4;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #0e5cad;
+  border-radius: 20px;
+  border: 3px solid #d0d3d4;
+}
 .input:focus {
   border-width: 2px;
   border-color: rgb(203 213 225);
