--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -104,3 +104,20 @@ body {
   font-weight: 100;
   font-size: 1rem;
 }
+
+.input1 {
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border-radius: 2rem;
+  width: 250px;
+  height: 3rem;
+  padding: 1rem;
+  border-width: 2px;
+  border-color: transparent;
+  outline: none;
+  font-size: 1rem;
+  font-weight: bold;
+  transition-duration: 200ms;
+  transition-property: all;
+  transition-timing-function: ease-in-out;
+}
