--- a/front-end/src/components/Login/styles/login.css
+++ b/front-end/src/components/Login/styles/login.css
@@ -7,7 +7,7 @@
 }
 
 #textContainer {
-  height: 200px;
+  height: 300px;
 
   width: 70%;
   background: rgba(255, 255, 255, 0.824);
@@ -15,4 +15,15 @@
   backdrop-filter: blur(3.5px);
   -webkit-backdrop-filter: blur(3.5px);
   border-radius: 10px;
+}
+
+@media (max-width: 767px) {
+  #image {
+    display: none;
+    width: 80%;
+    gap: 10px;
+  }
+  #formContainer {
+    width: 100% !important;
+  }
 }
