--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,8 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 body {
-  background: #fff; /* fallback for old browsers */
   overflow-x: hidden;
+  min-height: 100%;
+  overflow-y: inherit;
+}
+
+@media (max-width: 767px) {
+  #navBar {
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 100px;
+    margin-bottom: 50px;
+  }
+  #themeSwitch {
+    right: 50px;
+  }
+}
+
+#dark {
+  overflow-x: hidden;
+
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #434343,
+    #000000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #434343,
+    #000000
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  min-height: 100%;
+}
+#vanilla {
+  background-color: #fff;
 }
 #form {
   height: 400px;
@@ -44,6 +77,11 @@ body {
 }
 
 /* Works on Chrome, Edge, and Safari */
+
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
 *::-webkit-scrollbar {
   width: 10px;
 }
