--- a/front-end/src/components/RandomUsers/styles/searchBar.css
+++ b/front-end/src/components/RandomUsers/styles/searchBar.css
@@ -1,19 +1,16 @@
-@media (max-width: 770px) {
+@media (max-width: 767px) {
+  #searchBox {
+    width: 100%;
+
+    flex-direction: column;
+    margin-bottom: 20px;
+    justify-content: start;
+  }
   #searchBar {
-    width: 80%;
-    gap: 10px;
+    width: 500px;
   }
 }
 
-@media (max-width: 767px) {
-  #searchBar {
-    width: 80%;
-    margin-top: 200px;
-    gap: 10px;
-    flex-direction: column;
-    margin-bottom: 20px;
-  }
-  #searchBox {
-    gap: 3px;
-  }
+#searchContainer label {
+  color: white;
 }
